fix align center

--- a/src/styles/theme-form.scss
+++ b/src/styles/theme-form.scss
@@ -44,3 +44,9 @@
   .ss-options-wrap { max-height: 300px !important; overflow-y: auto; }
   .ss-option { padding-left: 56px !important; }
 }
+
+//----- SemiCheckInput
+
+.sc-wrap {
+  label { width: auto !important; }
+}
